/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.7/userguide/building_java_projects.html in the Gradle documentation.
 */

//plugins {
//    id 'org.owasp.dependencycheck' version '10.0.3'
//}

apply plugin: 'java'
apply plugin: 'application'
apply plugin : 'jacoco'

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}
dependencies {
    // Lombok annotations
    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'

    // Test dependencies
    testImplementation 'com.github.tomakehurst:wiremock-jre8:3.0.1'
    testImplementation 'org.mockito:mockito-core:5.12.0'
    testImplementation 'junit:junit:4.13.2'

    // JWT dependencies
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // Various dependencies
    implementation 'com.jcraft:jsch:0.1.55'
    implementation 'org.mindrot:jbcrypt:0.4'
    implementation 'org.junit.jupiter:junit-jupiter-api:5.11.0-M2'
    implementation 'org.junit.jupiter:junit-jupiter-engine:5.11.0-M2'
    implementation 'org.json:json:20240303'
    implementation 'org.apache.httpcomponents:fluent-hc:4.5.14'
    implementation 'org.jetbrains:annotations:24.1.0'
    implementation 'org.mongodb:bson:5.1.1'
    implementation 'org.netbeans.external:org-apache-commons-codec:RELEASE220'
    implementation 'org.netbeans.external:org-apache-commons-io:RELEASE113'
    implementation 'org.apache.commons:commons-lang3:3.14.0'
    implementation 'org.netbeans.external:org-apache-commons-logging:RELEASE220'
    implementation 'com.google.code.gson:gson:2.11.0'
    implementation 'org.netbeans.external:com-google-guava:RELEASE113'
    implementation 'org.apache.httpcomponents:httpclient:4.5.14'
    implementation 'org.apache.directory.studio:org.apache.httpcomponents.httpcore:4.1.2'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.1'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.17.1'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
    implementation 'com.clumd.projects:java-json:1.2.1'
    implementation 'org.eclipse.jetty.aggregate:jetty-all:9.4.54.v20240208'
    implementation 'io.jsonwebtoken:jjwt:0.12.6'
    implementation 'com.sun.jna:jna:3.0.9'
    implementation 'org.lightcouch:lightcouch:0.2.0'
    implementation 'ch.qos.logback:logback-classic:1.5.6'
    implementation 'ch.qos.logback:logback-core:1.5.6'
    implementation 'io.micrometer:micrometer-commons:1.13.1'
    implementation 'io.micrometer:micrometer-observation:1.13.1'
    implementation 'org.mongodb:mongo-java-driver:3.12.14'
    implementation 'com.neuronrobotics:nrjavaserial:5.2.1'
    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
    implementation 'org.springframework:spring-messaging:5.3.37'
    implementation 'org.springframework:spring-websocket:5.3.37'
    implementation 'org.apache.servicemix.bundles:org.apache.servicemix.bundles.velocity:1.7_6'
    implementation 'org.jetbrains:annotations:24.1.0'

    implementation 'org.slf4j:slf4j-api:1.7.32'


    // Use Jetty WebSocket dependencies
    implementation 'org.eclipse.jetty.websocket:websocket-server:9.4.54.v20240208'
    implementation 'org.eclipse.jetty.websocket:websocket-common:9.4.54.v20240208'

    // Use javax.websocket-api
    //implementation 'javax.websocket:javax.websocket-api:1.1'

    // logs
    implementation 'net.logstash.logback:logstash-logback-encoder:8.0'
}
sourceSets{
    main{
        java{
            srcDirs 'lib/unpacked'
        }
    }
}
task buildAndRun {
    dependsOn 'build' // Ensures 'build' task is executed first

    doLast {
        // Run the Java application

    }
}


// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
    sourceCompatibility = '17'
    targetCompatibility = '17'

}
run{
    systemProperty 'logback.configurationFile', './src/main/resources/logback.xml'
    systemProperty 'javax.net.ssl.trustStore', './cacerts.jks'
    systemProperty 'javax.net.ssl.trustStorePassword', 'changeit'
}
test{
    useJUnitPlatform()
    onlyIf {
        !project.hasProperty('test.skip') || !project.getProperty('test.skip').toBoolean()
    }
}
jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        csv.required = false
        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
    }
}

task printEnvVariables {
    doLast {
        println "JAVA_HOME: ${System.getenv('JAVA_HOME')}"
    }
}

//// Optional: Configuration for the dependencyCheck task (customize as needed)
//dependencyCheck {
//    failBuildOnCVSS = 7.0 // Fail the build if any vulnerability is above this score
//    format = 'HTML' // Report format (HTML, XML, JUNIT, SARIF, etc.)
//    outputDirectory = "build/reports" // Where to put the report
//    // additional configurations can be added here
//
//    nvd {
//        apiKey = System.getenv("NVD_API_KEY") ?: System.getProperty("nvd.apiKey")
//    }
//}
